$Id: History,v 1.12 2001-08-17 22:57:51 johna Exp $

History file for visualization/test subdirectory
------------------------------------------------

17th August 2001  John Allison  (vis-V03-02-12)
- test19.cc registers graphics system XXX.
- MySteppingAction draws a scale.

29th May 2001  John Allison
- Cleaned up Linux pedantic warnings (unused variables, comparisons, etc.)

15th March 2001  John Allison  (vis-V03-00-08)
- Major re-work of replica instantiation in MyDetectorConstruction.cc
  to ensure correspondence with rule that phi=0 bisects the replicated
  sub-volume.  Note: replicas still cause crash on Linux in Ray Tracer.
- Suppressed multiple scattereing lateral displacement in MyPhysicsList.cc
  (can't remember why!).

21st February 2001  John Allison
- Changed test14.g4m to new commands.

1st February 2001  John Allison (vis-V03-00-01)
- Added /vis/set/sides 100 to test19.g4m and changed rayTracer to 400x400.

16th January 2001  John Allison
- Changed screen units to pixels in MySteppingAction.cc.

3rd July 2000  John Allison
- Switched to replicas in MyDetectorConstruction.

22nd May 2000  John Allison
- Invoke G4UItcsh in G4UIterminal in test19.cc (needs interfaces-V01-01-00).
- Evgeni's node positions to avoid shared faces/edges in
  MyDetectorConstruction.cc.
- Changed colour of intercepts in MySteppingAction.cc.
- Demonstrated G4VTreeGraphicsScene in test19.cc.

12th April 2000  John Allison  vis-V01-01-01
- Added more boolean shapes and window to test.

11th January 2000  John Allison
- Added Sphere and test of displaced solids.

16th December 1999  John Allison
- MyDetectorConstruction.cc: added replica volumes.
- test19.cc: added more printing to check destruction of managers.
- test19.g4m: added commands for viewing replicas.

12th August  Guy Barrand
- introduce the X11 resource file test19.xrm
  to control appearance of things. It is used
  as usual with : setenv XENVIRONMENT test19.xrm

10th August  Guy Barrand