@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: MySteppingAction.cc,v 1.11 2001-08-17 22:56:12 johna Exp $
+// $Id: MySteppingAction.cc,v 1.12 2001-08-24 20:26:01 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -40,7 +40,6 @@
 #include "G4Colour.hh"
 #include "G4Polyline.hh"
 #include "G4Circle.hh"
-#include "G4Scale.hh"
 #include "G4Square.hh"
 
 void MySteppingAction::UserSteppingAction(const G4Step* pStep) {
@@ -128,10 +127,6 @@ void MySteppingAction::UserSteppingAction(const G4Step* pStep) {
     attribs333=G4VisAttributes(colour333);
     circle333.SetVisAttributes(attribs333);
     pVVisManager->Draw(circle333);
-
-    G4Scale scale(1. * m);
-    scale.SetVisAttributes(G4Colour(1.,0.,0.));
-    pVVisManager->Draw(scale);
   }
   // User Action Example - end snippet.
 }
